--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ project.ext.pluginDesc = [
 ]
 
 // Force 1.7 compatibility to ensure that it works with older JVMs
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -46,11 +46,18 @@ dependencies {
   compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
   compile group: 'com.google.guava', name: 'guava', version: '19.0'
   compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+  compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
   testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.3.0'
   testCompile group: 'cd.go.plugin', name: 'go-plugin-api', version: project.pluginDesc.goCdVersion
+}
+
+task packageAssets(type: Zip) {
+  from "${project.buildDir}/assets"
+  destinationDir = file('src/main/resources')
+  archiveName = 'assets.zip'
 }
 
 processResources {
@@ -63,6 +70,8 @@ processResources {
       expand project.pluginDesc
     }
   }
+
+  from packageAssets
 }
 
 jar {
