--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ build/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+#generated files
+**/*/out
+**/*/assets.zip
